src/test/ui/walk-struct-literal-with.nll.stderr
error[E0382]: borrow of moved value: `start`
  --> $DIR/walk-struct-literal-with.rs:16:20
   |
LL |     let end = Mine{other_val:1, ..start.make_string_bar()};
   |                                   ----- value moved here
LL |     println!("{}", start.test); //~ ERROR use of moved value: `start.test`
   |                    ^^^^^^^^^^ value borrowed here after move
   |
   = note: move occurs because `start` has type `Mine`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
